dt10/soft/outputs/f10-dut-python.stderr.txt
  File "dt10/soft/outputs/f10.py", line 2
    def factorial(, n):
                  ^
SyntaxError: invalid syntax
